add rotor_constraints property

--- a/documents/site-IEA37_Optimization_Case_Study_1.3km.yaml
+++ b/documents/site-IEA37_Optimization_Case_Study_1.3km.yaml
@@ -3,6 +3,7 @@ name: Small IEA Wind Task 37 plant optimization case study site
 particulars:
   - disc-shaped site
   - meant for a 16-turbine farm
+rotor_constraints: false
 radius: 1.3
 subsites:
   - constraints:
