--- a/documents/site-Horns_Rev.yaml
+++ b/documents/site-Horns_Rev.yaml
@@ -19,6 +19,7 @@ particulars:
     Niayifar, A. and Porté-Agel, F. (2016) Analytical modeling of wind farms:
     A new approach for power prediction. Energies 9(9):741.
 
+rotor_constraints: false
 radius: 3.3548
 location:
   geo: [55.486, 7.840] # https://www.4coffshore.com/windfarms/horns-rev-1-denmark-dk03.html
