--- a/documents/site-IEA37_Combined_Case_Study_0.9km.yaml
+++ b/documents/site-IEA37_Combined_Case_Study_0.9km.yaml
@@ -3,6 +3,7 @@ name: IEA Wind Task 37 plant combined case study site
 particulars:
   - disc-shaped site
   - meant for a 9-turbine farm
+rotor_constraints: false
 radius: 0.9
 subsites:
   - constraints:
