add Grady et al. to Mosetti site document

--- a/documents/site-Mosetti_et_al.yaml
+++ b/documents/site-Mosetti_et_al.yaml
@@ -11,6 +11,9 @@ particulars:
     turbine positioning in large windfarms by means of a genetic algorithm.
     Journal of Wind Engineering and Industrial Aerodynamics 51(1):105–116.
 
+    Grady, S., Hussaini, M., and Abdullah, M. (2005) Placement of wind turbines
+    using genetic algorithms. Renewable Energy 30(2):259–270.
+
     Turner, S., Romero, D., Zhang, P., Amon, C., and Chan, T. (2014) A new
     mathematical programming approach to optimize wind farm layouts. Renewable
     Energy 63:674–680.
