add Pookpunt & Ongsakul paper to Mosetti followers

--- a/documents/turbine-Mosetti_et_al.yaml
+++ b/documents/turbine-Mosetti_et_al.yaml
@@ -17,6 +17,10 @@ particulars:
     Grady, S., Hussaini, M., and Abdullah, M. (2005) Placement of wind turbines
     using genetic algorithms. Renewable Energy 30(2):259–270.
 
+    Pookpunt, S. and Ongsakul, W. (2013) Optimal placement of wind turbines
+    within wind farm using binary particle swarm optimization with time-varying
+    acceleration coefficients. Renewable Energy 55:266–276.
+
     Turner, S., Romero, D., Zhang, P., Amon, C., and Chan, T. (2014) A new
     mathematical programming approach to optimize wind farm layouts. Renewable
     Energy 63:674–680.
