have Mosetti site be rotor-constrained to approximate somewhat the discretized nature of the original layout

--- a/documents/site-Mosetti_et_al.yaml
+++ b/documents/site-Mosetti_et_al.yaml
@@ -29,7 +29,8 @@ particulars:
     Offshore wind farm layout optimization using particle swarm optimization.
     Journal of Ocean Engineering and Marine Energy 4(1):73–88.
 
-rotor_constraints: false
+rotor_constraints: true  # to approximate somewhat the discretized nature in
+                         # the original papers
 radius: 1.4142 # sqrt(2) * 10 * 40 m * 5 / 2 / 1000 m/km
 parcels:
   - constraints:
