reorganize files; reorganize wind resource schema and adapt the wind resource documents

--- a/documents/Horns_Rev/wind_resource-Feng+Shen.yaml
+++ b/documents/Horns_Rev/wind_resource-Feng+Shen.yaml
@@ -14,15 +14,16 @@ particulars:
 reference_height: 62
 period:
   - [1989-01, 2002-10]
-wind_direction: [  0.,  30.,  60.,
-                  90., 120., 150.,
-                 180., 210., 240.,
-                 270., 300., 330.]
-probability: [ 3.8,  4.3,  5.5,
-               8.3,  8.7,  6.7,
-               8.4, 10.5, 11.4,
-              12.2, 13.9,  6.1]
-weibull_parameters: [[ 8.71, 2.08], [ 9.36, 2.22], [ 9.29, 2.41],
-                     [10.27, 2.37], [10.89, 2.51], [10.49, 2.75],
-                     [10.94, 2.61], [11.23, 2.51], [11.93, 2.33],
-                     [11.94, 2.35], [12.17, 2.58], [10.31, 2.01]]
+wind_rose:
+  directions: [  0.,  30.,  60.,
+                90., 120., 150.,
+               180., 210., 240.,
+               270., 300., 330.]
+  direction_pmf: [ 3.8,  4.3,  5.5,
+                   8.3,  8.7,  6.7,
+                   8.4, 10.5, 11.4,
+                  12.2, 13.9,  6.1]
+  speed_cweibull: [[ 8.71, 2.08], [ 9.36, 2.22], [ 9.29, 2.41],
+                   [10.27, 2.37], [10.89, 2.51], [10.49, 2.75],
+                   [10.94, 2.61], [11.23, 2.51], [11.93, 2.33],
+                   [11.94, 2.35], [12.17, 2.58], [10.31, 2.01]]
