--- a/documents/IEA37_reference/wind_resource-IEA37_reference.yaml
+++ b/documents/IEA37_reference/wind_resource-IEA37_reference.yaml
@@ -10,15 +10,17 @@ particulars:
     locations (1–25 m/s, assumedly).
 
 reference_height: 119 # hub height taken
-wind_direction: [  0.,  30.,  60.,
-                  90., 120., 150.,
-                 180., 210., 240.,
-                 270., 300., 330.]
-probability: [ 5.1,  4.3,  4.3,
-               6.6,  8.9,  6.5,
-               8.7, 11.5, 12.0,
-              11.1, 11.4,  9.6]
-weibull_parameters: [[ 8.65, 2.11], [ 8.86, 2.05], [ 8.15, 2.35],
-                     [ 9.98, 2.55], [11.35, 2.81], [10.96, 2.74],
-                     [11.28, 2.63], [11.50, 2.40], [11.08, 2.23],
-                     [10.94, 2.28], [11.27, 2.29], [10.55, 2.28]]
+wind_rose:
+  directions: [  0.,  30.,  60.,
+                90., 120., 150.,
+               180., 210., 240.,
+               270., 300., 330.]
+  direction_pmf: [ 5.1,  4.3,  4.3,
+                   6.6,  8.9,  6.5,
+                   8.7, 11.5, 12.0,
+                  11.1, 11.4,  9.6]
+  speed_cweibull: [[ 8.65, 2.11], [ 8.86, 2.05], [ 8.15, 2.35],
+                   [ 9.98, 2.55], [11.35, 2.81], [10.96, 2.74],
+                   [11.28, 2.63], [11.50, 2.40], [11.08, 2.23],
+                   [10.94, 2.28], [11.27, 2.29], [10.55, 2.28]]
+
