--- a/documents/Horns_Rev/site-Horns_Rev.yaml
+++ b/documents/Horns_Rev/site-Horns_Rev.yaml
@@ -18,7 +18,7 @@ particulars:
 
     Niayifar, A. and Porté-Agel, F. (2016) Analytical modeling of wind farms:
     A new approach for power prediction. Energies 9(9):741.
-  - roughness length obtained via personal communication 2019-01-09
+  - roughness length obtained via personal communication on 2019-01-09
 
 rotor_constraints: false
 radius: 3.3548
