--- a/documents/Horns_Rev/problem-Horns_Rev.yaml
+++ b/documents/Horns_Rev/problem-Horns_Rev.yaml
@@ -23,6 +23,5 @@ turbine_distance: 5
 turbines: 80
 layout: "layout-Horns_Rev.yaml"
 objective: "maximize expected power"
-wake_model: "Jensen"
+wake_model: "Jensen with analytical partial wake"
 wake_combination: "RMS"
-partial_wake: "analytical integration"
