add code for wake models; update documents and schema as needed

--- a/documents/Horns_Rev/problem-Horns_Rev.yaml
+++ b/documents/Horns_Rev/problem-Horns_Rev.yaml
@@ -24,4 +24,4 @@ turbines: 80
 layout: "layout-Horns_Rev.yaml"
 objective: "maximize expected power"
 wake_model: "Jensen with analytical partial wake"
-wake_combination: "RMS"
+wake_combination: "RSS"
