--- a/documents/IEA37_reference/problem-IEA37_reference.yaml
+++ b/documents/IEA37_reference/problem-IEA37_reference.yaml
@@ -7,8 +7,7 @@ particulars:
 site: "site-IEA37_reference.yaml"
 wind_resource: "wind_resource-IEA37_reference.yaml"
 wind_direction_subdivisions: 30  # results in 360 1° bins
-wind_speeds: [ 4.,  5.,  6.,  7.,  8.,  9., 10., 11., 12., 13., 14., # TODO
-              15., 16., 17., 18., 19., 20., 21., 22., 23., 24., 25.]
+wind_speeds: [ 6.1, 10.3, 14.5, 18.7, 22.9]
 turbine: "turbine-IEA37_reference.yaml"
 turbine_distance:  # TODO
 turbines:  # TODO
