--- a/documents/IEA37_reference/wind_resource-IEA37_reference.yaml
+++ b/documents/IEA37_reference/wind_resource-IEA37_reference.yaml
@@ -9,7 +9,7 @@ particulars:
     30 equal (1°) sub-bins and the wind speeds are sampled at 25 equally spaced
     locations (1–25 m/s, assumedly).
 
-reference_height: 119 # hub height taken
+reference_height: 119 # same as hub height
 wind_rose:
   directions: [  0.,  30.,  60.,
                 90., 120., 150.,
@@ -23,4 +23,3 @@ wind_rose:
                    [ 9.98, 2.55], [11.35, 2.81], [10.96, 2.74],
                    [11.28, 2.63], [11.50, 2.40], [11.08, 2.23],
                    [10.94, 2.28], [11.27, 2.29], [10.55, 2.28]]
-
