correct some attribute names in IEA37 Case Study site documents

--- a/documents/IEA37_Case_Study/site-IEA37_Optimization_Case_Study-medium.yaml
+++ b/documents/IEA37_Case_Study/site-IEA37_Optimization_Case_Study-medium.yaml
@@ -5,6 +5,6 @@ particulars:
   - meant for a 36-turbine farm
 rotor_constraints: false
 radius: 2.0
-subsites:
+parcels:
   - constraints:
       - {"xx": 1.0, "yy": 1.0, "1": -1.0}
