--- a/documents/IEA37_Case_Study/site-IEA37_Combined_Case_Study.yaml
+++ b/documents/IEA37_Case_Study/site-IEA37_Combined_Case_Study.yaml
@@ -5,6 +5,6 @@ particulars:
   - meant for a 9-turbine farm
 rotor_constraints: false
 radius: 0.9
-subsites:
+parcels:
   - constraints:
       - {"xx": 1.0, "yy": 1.0, "1": -1.0}
