--- a/documents/IEA37_Case_Study/site-IEA37_Optimization_Case_Study-small.yaml
+++ b/documents/IEA37_Case_Study/site-IEA37_Optimization_Case_Study-small.yaml
@@ -5,6 +5,6 @@ particulars:
   - meant for a 16-turbine farm
 rotor_constraints: false
 radius: 1.3
-subsites:
+parcels:
   - constraints:
       - {"xx": 1.0, "yy": 1.0, "1": -1.0}
