--- a/documents/IEA37_Case_Study/site-IEA37_Combined_Case_Study.yaml
+++ b/documents/IEA37_Case_Study/site-IEA37_Combined_Case_Study.yaml
@@ -3,8 +3,8 @@ name: IEA Wind Task 37 plant combined case study site
 particulars:
   - disc-shaped site
   - meant for a 9-turbine farm
-rotor_constraints: false
 radius: 0.9
 parcels:
-  - constraints:
-      - {"xx": 1.0, "yy": 1.0, "1": -1.0}
+  - circle: {center: [0, 0],  radius: 1.}
+boundaries:
+  - circle: {center: [0, 0],  radius: 1.}
