--- a/documents/IEA37_reference/site-IEA37_reference.yaml
+++ b/documents/IEA37_reference/site-IEA37_reference.yaml
@@ -10,18 +10,18 @@ location:
   - utm: [494863.24, 5726454.39]
 parcels:
   - constraints:
-      - {"x": -0.316688, "y":  1.0, "1": -0.767208}
-      - {"x": -0.965168, "y": -1.0, "1": -0.349210}
-      - {"x":  1.0, "y": -0.144082, "1": -0.644846}
-      - {"x":  1.0, "y":  0.362028, "1": -0.756270}
+      - {"x": -0.316688, "y":  1.0, "1": -0.767208} # 3 4
+      - {"x": -0.965168, "y": -1.0, "1": -0.349210} # 0 4
+      - {"x":  1.0, "y": -0.144082, "1": -0.644846} # 0 1
+      - {"x":  1.0, "y":  0.362028, "1": -0.756270} # 1 3
     exclusions:
       - constraints:
           - {"x":  0.466179, "y":  1.0, "1": -0.535559}
           - {"x":  1.0, "y": -0.497298, "1":  0.019840}
 boundaries:
   - polygon:
-      - [ 0.521948, -0.852978]
-      - [ 0.676567,  0.220158]
-      - [ 0.200103,  0.442276]
-      - [ 0.429300,  0.903162]
-      - [-0.870939,  0.491392]
+      - [ 0.521948, -0.852978] # 0
+      - [ 0.676567,  0.220158] # 1
+      - [ 0.200103,  0.442276] # 2  (exclusion)
+      - [ 0.429300,  0.903162] # 3
+      - [-0.870939,  0.491392] # 4
