--- a/documents/Horns_Rev/wind_resource-Feng+Shen.yaml
+++ b/documents/Horns_Rev/wind_resource-Feng+Shen.yaml
@@ -14,6 +14,7 @@ particulars:
 reference_height: 62
 period:
   - [1989-01, 2002-10]
+turbulence_intensity: 0.075 # for when using BPA, copied from IEA37 Case Study
 wind_rose:
   directions: [  0.,  30.,  60.,
                 90., 120., 150.,
