reorganize whole wake model processing approach

--- a/documents/BWFS/problem-BWFS-IV-test.yaml
+++ b/documents/BWFS/problem-BWFS-IV-test.yaml
@@ -7,5 +7,6 @@ turbine_distance: 2
 turbines: 3660
 layout: "layout-BWFS-IV-site_constraint_test.yaml"
 objective: "maximize expected power"
-wake_model: "BPA (IEA37)"
+wake_model:
+  wake_type: "BPA (IEA37)"
 wake_combination: "RSS"
