--- a/documents/Horns_Rev/problem-Horns_Rev-BPA.yaml
+++ b/documents/Horns_Rev/problem-Horns_Rev-BPA.yaml
@@ -23,5 +23,6 @@ turbine_distance: 5
 turbines: 80
 layout: "layout-Horns_Rev.yaml"
 objective: "maximize expected power"
-wake_model: "BPA (IEA37)"
+wake_model:
+  wake_type: "BPA (IEA37)"
 wake_combination: "RSS"
