--- a/documents/IEA37_CS_3+4/problem-IEA37_CS4-BPA.yaml
+++ b/documents/IEA37_CS_3+4/problem-IEA37_CS4-BPA.yaml
@@ -7,5 +7,6 @@ turbine_distance: 2
 turbines: 81
 layout: "layout-IEA37_CS4.yaml"
 objective: "maximize expected power"
-wake_model: "BPA (IEA37)"
+wake_model:
+  wake_type: "BPA (IEA37)"
 wake_combination: "RSS"
