--- a/documents/Horns_Rev/problem-Horns_Rev.yaml
+++ b/documents/Horns_Rev/problem-Horns_Rev.yaml
@@ -23,5 +23,8 @@ turbine_distance: 5
 turbines: 80
 layout: "layout-Horns_Rev.yaml"
 objective: "maximize expected power"
-wake_model: "Jensen with partial wake"
+wake_model:
+  wake_type: "linear top hat"
+  deficit_type: "Jensen"
+  averaging: true
 wake_combination: "RSS"
