add missing uuid to document

--- a/documents/BWFS/site-BWFS-II.yaml
+++ b/documents/BWFS/site-BWFS-II.yaml
@@ -1,4 +1,4 @@
-uuid:
+uuid: 66274a7d-e7fe-4fa2-b246-23c41929ab4b
 name: Borssele Wind Farm Site II
 particulars:
   - Point data obtained from tender material at
