--- a/documents/IEA37_reference/site-IEA37_reference.yaml
+++ b/documents/IEA37_reference/site-IEA37_reference.yaml
@@ -10,14 +10,14 @@ location:
   utm: [494863.24, 5726454.39]
 parcels:
   - constraints:
-      - {"x": -0.316688, "y":  1.0, "1": -0.767208} # 3 4
-      - {"x": -0.965168, "y": -1.0, "1": -0.349210} # 0 4
-      - {"x":  1.0, "y": -0.144082, "1": -0.644846} # 0 1
-      - {"x":  1.0, "y":  0.362028, "1": -0.756270} # 1 3
+      - {"x": -0.316688, "y":  1.0, "1": -0.767208, rotor_constraint: true} # 3 4
+      - {"x": -0.965168, "y": -1.0, "1": -0.349210, rotor_constraint: true} # 0 4
+      - {"x":  1.0, "y": -0.144082, "1": -0.644846, rotor_constraint: true} # 0 1
+      - {"x":  1.0, "y":  0.362028, "1": -0.756270, rotor_constraint: true} # 1 3
     exclusions:
       - constraints:
-          - {"x": -0.466179, "y": -1.0, "1":  0.535559}
-          - {"x": -1.0, "y":  0.497298, "1": -0.019840}
+          - {"x": -0.466179, "y": -1.0, "1":  0.535559, rotor_constraint: true}
+          - {"x": -1.0, "y":  0.497298, "1": -0.019840, rotor_constraint: true}
 boundaries:
   - polygon:
       - [ 0.521948, -0.852978] # 0
